--- a/index.html
+++ b/index.html
@@ -1,31 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>BobPluss.com</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/archive">Archive</a></li>
-        		<li><a href="/about">About</a></li>
-        		<li><a href="/contact">Contact</a></li>
-            <li><a href="twitter.com/bnpluss">Twitter</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Bob Pluss!</h1>
-				<p>I am a serial entrepreneur who is always on the go. This is my personal blog where I will blog about anything and everything that interests me. I am one of the co-founders of Race Roster, and that is currently my sole pursuit.</p>
-				<p>If you want to get in touch with me, you can use the contact form here, or interact with me via one (or more) of the social media services listed below. I hope you will find some value in the posts that I write on this blog. Keep on mixing & mangling.</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li>Copyright &copy; 2019</li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hi there, I'm Hank Quinlan!</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
