--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: BobPluss.com - Mix & Mangle
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, I'm Bob Pluss!</h1>
+				<p>I am a serial entrepreneur who is always on the go. This is my personal blog where I will blog about anything and everything that interests me. I am one of the co-founders of Race Roster, and that is currently my sole pursuit.</p>
+ 				<p>If you want to get in touch with me, you can use the contact form here, or interact with me via one (or more) of the social media services listed below. I hope you will find some value in the posts that I write on this blog. Keep on mixing & mangling.</p>
 </div><!-- /.blurb -->
