--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,8 @@
+---
+layout: default
+title: "BobPluss.com - About Me"
+date: 2019-05-10
+---
+I am a serial entrepreneur who is always on the go. This is my personal blog where I will blog about anything and everything that interests me. I am one of the co-founders of Race Roster, and that is currently my sole pursuit.
 
+If you want to get in touch with me, you can use the contact form here, or interact with me via one (or more) of the social media services listed below. I hope you will find some value in the posts that I write on this blog. Keep on mixing & mangling.
